--- a/EDA and Linear Regression on Countries dataset.ipynb
+++ b/EDA and Linear Regression on Countries dataset.ipynb
@@ -4868,6 +4868,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Accuracy: 67%'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy = regressor.score(test_X, test_y)\n",
+    "\"Accuracy: {}%\".format(int(round(accuracy * 100)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So `67% accuracy` with simple linear regression. "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
